FOF 4.0.0.a1
================================================================================

Backwards compatibility notes
----------------------------------------
* Large part of FOF have been rewritten in version 4 and breaks b/c. Good news: you can have FOF 3 and FOF 4 run side by
  side thanks to the new use of namespaces.
* FOF 4 is licensed under GPL v3 or later. FOF 3 was licensed under GPL v2 or later. Your extensions need to use the new
  license version.
* FOF 4's forms are written against the markup provided by FEF. If you want to use XML forms you will need to provide
  your own layout overrides. Kindly note that FEF is NOT GPL and you can NOT distribute it with your extensions.
  Alternatively, do not use XML forms (recommended).
* The deprecated features have been removed
    * FOF40\Encrypt\AesAdapter\AdapterInterface::setEncryptionMode() no longer has the second parameter (strength).
* The AkeebaStrapper renderer has been removed. Use the Joomla3 renderer isntead

*** LEGEND ***
================================================================================
+ New feature or addition (no b/c issues)
- Feature removal
~ Small change (no b/c issues)
# Bug fix (no b/c or security issues)
$ Security bug fix (b/c issues possible; check description)
! Major change or bug fix (b/c issues)